# IFAETopFramework

./: .gitignore  CMakeLists.txt  ChangeLog  Job.py  README.md  install.sh
IFAETopFramework/: AnalysisObject.h  AnalysisUtils.h  CommonConstants.h  CutFlowTools.h  EnergyReweighter.h  HistManager.h  IFAE_Object.h  NtupleData.h  NtupleReader.h  OptionsBase.h  OutputClass.h  OutputData.h  OutputHistManager.h  OutputManager.h  OutputTreeManager.h  SampleInfo.h  Selection.h  SelectorBase.h  SystManager.h  TRFManager.h  TreeManager.h  TriggerInfo.h  VariableDef.h  WeightManager.h  WeightObject.h  json.hpp
Root/: AnalysisObject.cxx  AnalysisUtils.cxx  CutFlowTools.cxx  EnergyReweighter.cxx  HistManager.cxx  IFAE_Object.cxx  LinkDef.h  NtupleData.cxx  NtupleReader.cxx  OptionsBase.cxx  OutputClass.cxx  OutputData.cxx  OutputHistManager.cxx  OutputManager.cxx  OutputTreeManager.cxx  SampleInfo.cxx  Selection.cxx  SelectorBase.cxx  SystManager.cxx  TRFManager.cxx  TreeManager.cxx  TriggerInfo.cxx  VariableDef.cxx  WeightManager.cxx  WeightObject.cxx
cmt/: Makefile.RootCore
data/: RwHs.root  RwHstt.root
doc/: contributing.md
macros/: AnalyseTree.C  CheckFiles.py  README  ScanOutputFile.C
newer_selector/: ChangeLog
newer_selector/IFAETopFramework/: AnalysisObject.h  OutputManager.h  OutputTreeManager.h  TRFManager.h  TreeManager.h
newer_selector/Root/: HistManager.cxx  NtupleData.cxx  OptionsBase.cxx  OutputData.cxx  OutputHistManager.cxx  (+7 more)
python/: BatchTools.py  CheckOutputs.py  Job.py  Run.py  Samples.py
util/: AnalysisSkeleton.cxx  TestOutputClass.cxx
(+5 files in other folders)
